[package]
name = "gate"
version = "0.1.0"
authors = ["heyin <heyin.cjy@alibaba-inc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common
clap = { version = "3.0.0-beta.2", features = ["suggestions", "color"] }
env_logger = "0.8.2"
log = "0.4.14"


chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.3.0", features = ["full"] }
maplit = "1.0.2"

reqwest = { version = "0.11", features = ["blocking", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Color
colored = "2.0.0"

# Web
actix = "0.10.0"
actix-web = "3"
actix-web-actors = "3.0.0"